--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+body{
   color: #333;
   font-family: sans-serif;
   margin: 0;
@@ -141,11 +141,12 @@ section{
 }
 .icons a{
   width: 30px;
+  height: 25px;
   margin-right: 15px;
   background-color: #eee;
   border: 1px solid #eee;
-  padding: 2px 0 6px 0;
-  text-align:center;
+  padding-top: 5px;
+  text-align: center;
   border-radius: 50%;
 }
 .icons a svg{
