--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ footer ul{
   flex-wrap: wrap;
   list-style-type: none;
   margin: 5px 20px;
+  padding-left: 0;
 }
 footer ul li a{
   text-decoration: none;
